# IPZ_Project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
IPZ_Client/: CMakeLists.txt  dlaDawida.txt
IPZ_Client/assets/config/: test.txt
IPZ_Client/assets/misc/: data1.csv
IPZ_Client/assets/shaders/: default_mesh.fs  mesh_frag.glsl  mesh_vert.glsl  test.glsl  test2.glsl  test_frag.glsl  test_vert.glsl
IPZ_Client/build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  IPZ_Client.cbp  IPZ_Client.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
IPZ_Client/build_debug/.cmake/api/v1/reply/: cache-v2-7ef2f2fced38247c7987.json  cmakeFiles-v1-65bba6a0460d50c3c4fa.json  codemodel-v2-11e0eaa9689b564e36ac.json  index-2021-03-10T16-03-50-0426.json  target-IPZ_Client-Debug-034b5222a72af1c81a67.json
IPZ_Client/build_release/: CMakeCache.txt  IPZ_Client.cbp  build.ninja  cmake_install.cmake  qtcsettings.cmake  rules.ninja
IPZ_Client/build_release/.cmake/api/v1/reply/: cache-v2-220e039693c9dbd5af68.json  cmakeFiles-v1-2dfff29b9a4cebc523cb.json  codemodel-v2-4105deda8b7b5c076ba4.json  index-2021-03-10T16-04-30-0679.json  target-IPZ_Client-Release-55119c24d53edbd5c421.json
IPZ_Client/src/: application.cpp  application.h  asset_manager.cpp  asset_manager.h  assets.cpp  assets.h  buffer.cpp  buffer.h  camera.cpp  camera.h  config_parser.cpp  config_parser.h  game.h  graphics.h  graphics.h.autosave  main.cpp  olcPixelGameEngine.cpp  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  slidepuzzle.cpp  slidepuzzle.h  test1.h  testconnect4.cpp  testconnect4.h  testslidingpuzzle.cpp  testslidingpuzzle.h  utilities.h
IPZ_Client/src/AssetManagement/: asset_manager.cpp  assets.cpp  assets.h  entitymanager.cpp  entitymanager.h
IPZ_Client/src/Core/: application.cpp  application.h  scene.cpp  scene.h  utilities.h
IPZ_Client/src/Renderer/: batchrenderer.cpp  batchrenderer.h  buffer.cpp  buffer.h  camera.cpp  camera.h  graph.cpp  graph.h  graphicscontext.cpp  graphicscontext.h  imrenderer.cpp  imrenderer.h  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  renderable.h  renderer.cpp  renderer.h  renderspec.cpp  renderspec.h  shader.cpp  shader.h
IPZ_Client/src/Tests/: test1.cpp  test1.h  testconnect4.cpp  testconnect4.h  testga.cpp  testga.h  testmlp.cpp  testmlp.h  testpendulum.cpp  testpendulum.h  testrosenblat.cpp  testrosenblat.h  testslidingpuzzle.cpp  testslidingpuzzle.h
IPZ_Client/src/Tests/Connect4/: connect4.cpp  connect4.h
IPZ_Client/src/Tests/SlidingPuzzle/: slidepuzzle.h
IPZ_Shared/: EndpointType.cpp  GameClient.cpp  IPZ_Shared.sln  IPZ_Shared.vcxproj  IPZ_Shared.vcxproj.filters  NetworkHandler.h  tests.cpp
IPZ_Shared/src/: EndpointType.h  GameClient.h  GameServer.cpp  GameServer.h  NetworkHandler.cpp  NetworkHandler.h  reference.h
assets/img/: numero2.aseprite
assets/meshes/: Wolf.blend  Wolf.blend1  Wolf.fbx  build.blend  build.blend1  build.fbx  campfire.blend  campfire.blend1  campfire.fbx  campfire2.fbx  connect4_board.blend  connect4_board.fbx  cross.blend  cross.blend1  cross.fbx  lol.mtl  obelisk1.blend  obelisk1.fbx  obelisk2.blend  obelisk2.blend1  obelisk2.fbx  spider.blend  spider.blend1  spider.fbx  torch2.blend  torch2.blend1  torch2.fbx  tree.blend  tree.blend1  tree.fbx  tree2.blend  tree2.fbx  tree3.blend  tree3.fbx  tree4.blend  tree4.blend1  tree4.fbx  tree5.blend  tree5.fbx
assets/misc/: data2.csv
assets/shaders/: basic_pbr.fs  basic_pbr.vs  bilinear_downsample.cmp  bloom_downsample.cmp  bloom_upsample.cmp  blur_moving_avarage.cmp  cascading_sm.gs  cascading_sm.vs  default_batch.fs  default_batch.vs  default_mesh.fs  default_mesh.vs  final_composite.fs  final_composite.vs  mouse_world_pos.cmp  passthrough.fs  perlin_texture.cmp  simple_blur.fs  solid_color.fs  ssao.fs  tent_upsample.cmp  tent_upsampleR11F_G11F_B10F.cmp  terrain_height.cmp  terrain_pbr.vs  volumetric_light.fs  volumetric_upsample.cmp
audio/TestOpenAL/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  sound_test.cpp
config/: TheGame.pc  render_config.pc  scene.pc  testConnect4.pc
old_tests/: testconnect4.h  testcontagionsim.cpp  testga.cpp  testga.h  testslidingpuzzle.cpp  testterraingeneration.cpp  testterraingeneration.h
old_tests/SlidingPuzzle/: slidepuzzle.cpp  slidepuzzle.h
src/: main.cpp
src/AssetManagement/: asset_manager.cpp  asset_manager.h  assets.cpp  assets.h  entitymanager.h
src/Audio/: AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  sound_test.cpp
src/Audio/TestOpenAL/: AudioSource.h
src/Core/: application.cpp  application.h  components.h  entity.cpp  entity.h  gui.cpp  gui.h  instrumentation.h  math.cpp  math.h  scene.cpp  scene.h  utilities.h  yamlserialization.cpp  yamlserialization.h
src/Game/: game.cpp  game.h  gamecamera.cpp  gamecamera.h
src/Renderer/: batchrenderer.cpp  batchrenderer.h  buffer.cpp  buffer.h  camera.cpp  camera.h  graph.cpp  graph.h  graphicscontext.cpp  graphicscontext.h  light.cpp  light.h  mesh.cpp  mesh.h  meshrenderer.cpp  meshrenderer.h  renderpipeline.cpp  renderpipeline.h  shader.cpp  shader.h
src/Tests/: test1.cpp  testcameras.cpp  testcameras.h  testconnect4.cpp  testconnect4.h  testcontagionsim.cpp  testcontagionsim.h  testga.cpp  testmlp.cpp  testmlp.h  testpendulum.h  testslidingpuzzle.cpp
